[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name="ducktools"
description="Ducktools meta package"
authors = [
  { name="David C Ellis" },
]
readme="README.md"
requires-python = ">=3.9"
dependencies = [
    "ducktools-lazyimporter",
    "ducktools-script_metadata_parser@git+https://github.com/DavidCEllis/ducktools-script_metadata_parser",
    "ducktools-jsonkit@git+https://github.com/DavidCEllis/ducktools-jsonkit",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dynamic = ['version']

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "ducktools._package.__version__"}

[tool.pytest.ini_options]
addopts= "--cov=src/ --cov-report=term-missing"
testpaths = [
    "tests",
]